--- a/app/src/Brvah/res/layout/shortcutitem.xml
+++ b/app/src/Brvah/res/layout/shortcutitem.xml
@@ -9,8 +9,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/iVicon"
-            android:src="@drawable/ic_launcher_foreground"
+            android:src="@drawable/ic_launcher_background"
             />
+        <!--this fig only over 24: android:src="@drawable/ic_launcher_foreground"
+-->
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
